# ChangeLog for net-wireless/wpa_supplicant
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/wpa_supplicant/ChangeLog,v 1.98 2007/07/01 11:06:24 uberlord Exp $

  01 Jul 2007; Roy Marples <uberlord@gentoo.org>
  wpa_supplicant-0.5.7.ebuild, wpa_supplicant-0.5.8.ebuild,
  wpa_supplicant-0.6.0.ebuild:
  Stop inerhiting qt3 otherwise we break qt4 due to pathing on qmake, #183654.

*wpa_supplicant-0.5.8 (29 Jun 2007)

  29 Jun 2007; Roy Marples <uberlord@gentoo.org>
  +wpa_supplicant-0.5.8.ebuild:
  Bump.

  29 Jun 2007; Roy Marples <uberlord@gentoo.org>
  wpa_supplicant-0.5.7.ebuild, wpa_supplicant-0.6.0.ebuild:
  Don't hardcode path to qmake, #182867 thanks to Thomas Capricelli.

  19 Jun 2007; Stefan Schweizer <genstef@gentoo.org>
  wpa_supplicant-0.5.7.ebuild, wpa_supplicant-0.6.0.ebuild:
  New madwifi-ng-tools depends thanks to Gordon Malm
  <bugs-gentoo-org-01@bumpin.org> in bug 179348

*wpa_supplicant-0.6.0 (30 May 2007)

  30 May 2007; Roy Marples <uberlord@gentoo.org>
  +wpa_supplicant-0.6.0.ebuild:
  Add new development version.

  23 Feb 2007; Roy Marples <uberlord@gentoo.org>
  wpa_supplicant-0.5.7.ebuild:
  Stop using $ROOT in src_* functions, #168039

  13 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  wpa_supplicant-0.5.7.ebuild:
  Stable on ppc/x86 wrt bug #165459.

  12 Feb 2007; Simon Stelling <blubb@gentoo.org>
  wpa_supplicant-0.5.7.ebuild:
  stable on amd64; bug 165459

  23 Jan 2007; Roy Marples <uberlord@gentoo.org>
  +files/wpa_supplicant-0.5.7-gnutls.patch, wpa_supplicant-0.5.7.ebuild:
  Add support for gnutls and internal tls, #163390 thanks to
  Nikolas 'Atrus' Coukouma.

*wpa_supplicant-0.5.7 (15 Jan 2007)

  15 Jan 2007; Roy Marples <uberlord@gentoo.org>
  +wpa_supplicant-0.5.7.ebuild:
  Version bump, #162172 thanks to Brandon Low.
  Add dbus config file, #161590 thanks to Stian Skjelstad.

  13 Dec 2006; Roy Marples <uberlord@gentoo.org>
  wpa_supplicant-0.5.6.ebuild: