@@ -17,18 +17,18 @@ EBUILD wpa_supplicant-0.5.7.ebuild 6249 RMD160 b9291560b564aa224ad882728c0c3f5ac
 MD5 9eeeb8506bf82fcc69f2698be0aa972e wpa_supplicant-0.5.7.ebuild 6249
 RMD160 b9291560b564aa224ad882728c0c3f5ac7ffbcbd wpa_supplicant-0.5.7.ebuild 6249
 SHA256 fdae1aef1f2d35ac25634e61eea8e5d13620e497ab93ff897284fb92f2c242bf wpa_supplicant-0.5.7.ebuild 6249
-EBUILD wpa_supplicant-0.5.8.ebuild 6211 RMD160 2bdec00ce4ba63c52548b8dbffd35f760bd94dee SHA1 0f9b92c32b0412fbcfed4f220c70e2576707c2c0 SHA256 c8ced6d6426afafe052083dfcb67ed1083bfd506a6732ecb00b6d4aca9e8396e
-MD5 5a07521bc4cb497d15fa516ebda4e566 wpa_supplicant-0.5.8.ebuild 6211
-RMD160 2bdec00ce4ba63c52548b8dbffd35f760bd94dee wpa_supplicant-0.5.8.ebuild 6211
-SHA256 c8ced6d6426afafe052083dfcb67ed1083bfd506a6732ecb00b6d4aca9e8396e wpa_supplicant-0.5.8.ebuild 6211
-EBUILD wpa_supplicant-0.6.0.ebuild 6258 RMD160 48a1695f8e2aa4ea8434bef5e9182fcb2d499e3d SHA1 78a8288bc312697031bc68bb6620a54aa7765e5a SHA256 1e8630b6b6c146cb8a12c22e511b03dbe1be9839c770814770d1889bf7a6e999
-MD5 689f75102993fe034aed9fe650bba6c8 wpa_supplicant-0.6.0.ebuild 6258
-RMD160 48a1695f8e2aa4ea8434bef5e9182fcb2d499e3d wpa_supplicant-0.6.0.ebuild 6258
-SHA256 1e8630b6b6c146cb8a12c22e511b03dbe1be9839c770814770d1889bf7a6e999 wpa_supplicant-0.6.0.ebuild 6258
-MISC ChangeLog 21680 RMD160 704f9d89f2d3736a851d1709f6bf4d075e9a3e84 SHA1 8879b3a4368e271489348dbeeda4b72d52230a41 SHA256 9f904fc93520fa697c0111857b29a0893dcadfc57dd814dca231b421d1175687
-MD5 887b1aa13b810e3b11ba776f66901fc8 ChangeLog 21680
-RMD160 704f9d89f2d3736a851d1709f6bf4d075e9a3e84 ChangeLog 21680
-SHA256 9f904fc93520fa697c0111857b29a0893dcadfc57dd814dca231b421d1175687 ChangeLog 21680
+EBUILD wpa_supplicant-0.5.8.ebuild 6210 RMD160 c6991e76f2ceb3a563532816e179a693f39e8d20 SHA1 eeb930ef75f386d55376f436d3a51148f9745f9a SHA256 c788818285d68e6d30e4fe0431a5ac0a784b57cdd267d7a0716cac9000faba64
+MD5 fec6049bec95e4f52ddfa101571c7dea wpa_supplicant-0.5.8.ebuild 6210
+RMD160 c6991e76f2ceb3a563532816e179a693f39e8d20 wpa_supplicant-0.5.8.ebuild 6210
+SHA256 c788818285d68e6d30e4fe0431a5ac0a784b57cdd267d7a0716cac9000faba64 wpa_supplicant-0.5.8.ebuild 6210
+EBUILD wpa_supplicant-0.6.0.ebuild 6257 RMD160 879591885d071aab67e12d397273282ee11b7712 SHA1 7d44f0eee94f82a1f15f2502644788851e6a8676 SHA256 75edc557d4f7203f9caea08983ced0032bbf2cc25d9cc37d9ebd493092addf48
+MD5 fc125001793b943e5724a8e87c01915e wpa_supplicant-0.6.0.ebuild 6257
+RMD160 879591885d071aab67e12d397273282ee11b7712 wpa_supplicant-0.6.0.ebuild 6257
+SHA256 75edc557d4f7203f9caea08983ced0032bbf2cc25d9cc37d9ebd493092addf48 wpa_supplicant-0.6.0.ebuild 6257
+MISC ChangeLog 21848 RMD160 9f922387f60f4ad33e1b697e10f58681222161f7 SHA1 4f76de142b6d9385fee8b89d4fbe65a16f38a955 SHA256 c7360fe5c04c4056f15381c412f01e66843334cc75ef6d64fe670e03f5a6a899
+MD5 5706670da6313e2e288044f4b0ee5784 ChangeLog 21848
+RMD160 9f922387f60f4ad33e1b697e10f58681222161f7 ChangeLog 21848
+SHA256 c7360fe5c04c4056f15381c412f01e66843334cc75ef6d64fe670e03f5a6a899 ChangeLog 21848
 MISC metadata.xml 250 RMD160 876c64d1767e4bdd32723fa285a7dabf15f1e82e SHA1 60f90e59de723ec974b5e2d8c3a952c3ea378f6f SHA256 fd3c97233444ca2664cd393f484f4cba1ace7b76c686112b098ab45a4cebbe0e
 MD5 672d42771a5a69fdbc5ba1648d133812 metadata.xml 250
 RMD160 876c64d1767e4bdd32723fa285a7dabf15f1e82e metadata.xml 250
