@@ -1,6 +1,10 @@
 # ChangeLog for net-wireless/wpa_supplicant
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/wpa_supplicant/ChangeLog,v 1.98 2007/07/01 11:06:24 uberlord Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/wpa_supplicant/ChangeLog,v 1.99 2007/09/11 14:24:51 uberlord Exp $
+
+  11 Sep 2007; Roy Marples <uberlord@gentoo.org>
+  wpa_supplicant-0.5.8.ebuild, wpa_supplicant-0.6.0.ebuild:
+  Default to GNUTLS if both gnutls and ssl are specified.
 
   01 Jul 2007; Roy Marples <uberlord@gentoo.org>
   wpa_supplicant-0.5.7.ebuild, wpa_supplicant-0.5.8.ebuild,
